# Chainsaw-engine

./: .gitignore  CMakeLists.txt  ChainSaw.sh  README.md  compile_commands.json  run.sh  runGame.sh
.cache/clangd/index/: Application.h.03A6C3A9E61F16BB.idx  Assets.h.4BDF3AFAAEF7B768.idx  Camera.h.608BCFF222421B78.idx  Camera2D.h.5D480647BA64443E.idx  ChainSaw.cpp.162957C0896FC5B9.idx  ChainSaw.h.35E0ADDB1AAEADCF.idx  Context.h.132B2BFB0B7EEBC4.idx  Context.h.29DBD45EA955CFA4.idx  Context.h.6E1C22A53CDDAB60.idx  Core.h.2BEC503B09AAFB55.idx  Data.h.DB2B30CE8E8E1D1C.idx  ECS.h.2835C5A60414F527.idx  Editor.cpp.0C869FBCF08639E7.idx  Editor.h.83F95E2EB27531F6.idx  EnttInfo.h.31CA75765D8E85A2.idx  Event.h.E35E8D87BDD71625.idx  Events.h.89A9BEE170E51EF0.idx  Events.h.EF95F06E4AD4CC4F.idx  FA.h.E7414F48FD1E1954.idx  FA6FreeSolidFontData.h.2E7B2683F785E5AA.idx  Helpers.h.091B867F934D5E02.idx  Helpers.h.3868C8E9AD67FD12.idx  Hierarchy.h.240746AC69336059.idx  IControl.h.EDE46B5012EC67F8.idx  IconsFontAwesome6.h.D5961D53291203B7.idx  Inputs.h.1A7A36B83C994FD6.idx  Inputs.h.AA8FE27DC81378BF.idx  Inspector.h.BD83A95CF4FE10D6.idx  Interface.h.90A7B263895ABCB8.idx  MenuBar.h.C6A3B39D71F2CFB7.idx  MenuList.h.F7CE847583E3CBA0.idx  Renderer.h.1A7919523D7894C7.idx  Resource.h.A3BF6A1CB4FAC98F.idx  Script.h.4C0EFD66C4F67BC3.idx  Sprite.h.7AD3602B7284911A.idx  Transform.h.350EB29DC704EDE4.idx  Utilities.h.9F5AFFF4C5BE0BC4.idx  Viewport.h.2F13472C7D953476.idx  Widget.h.7CF2260737B39D11.idx  Window.h.A581F6E98001F5C2.idx  (+503 more)
Editor/: CMakeLists.txt
Editor/include/: Editor.h
Editor/include/Context/: Context.h  Events.h  Helpers.h  Inputs.h  Widget.h
Editor/include/Controls/: Camera.h  Camera2D.h  EnttInfo.h  IControl.h  Script.h  Sprite.h  Transform.h
Editor/include/Vendors/imgui/: rlImGui.cpp
Editor/include/Windows/: Hierarchy.h  Inspector.h  MenuBar.h  MenuList.h  Playport.h  Resource.h  Viewport.h
Editor/src/: Editor.cpp  ImGuiImpl_CS.cpp
Engine/: CMakeLists.txt
Engine/include/Application/: Application.h  Context.h  Interface.h
Engine/include/Auxiliaries/: Assets.h  ECS.h  Serializer.h
Engine/include/Common/: Core.h  Event.h  YAML.h
Engine/include/Graphics/: Renderer.h
Engine/include/Graphics/Utilities/: Data.h
Engine/include/Scripts/: Context.h  Helpers.h  Utilities.h
Engine/include/Window/: Events.h  Inputs.h  Window.h
Engine/src/: ChainSaw.cpp
Game/: CMakeLists.txt
Scripts/: TestScript.lua
Scripts/Engine/: Core.lua
Targets/Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
Targets/Debug/.cache/clangd/index/: fractional-scale-v1-client-protocol-code.h.26C4234206EF4131.idx  fractional-scale-v1-client-protocol.h.0A023C6047B2EF10.idx  idle-inhibit-unstable-v1-client-protocol-code.h.EB7621AB97F9B494.idx  idle-inhibit-unstable-v1-client-protocol.h.05F33271892955DF.idx  pointer-constraints-unstable-v1-client-protocol-code.h.772D8BAF9EBD31AE.idx  pointer-constraints-unstable-v1-client-protocol.h.AC6BF799BE4AA0FF.idx  relative-pointer-unstable-v1-client-protocol-code.h.E9FF37B0BA2C5880.idx  relative-pointer-unstable-v1-client-protocol.h.58B01F21E3E915F0.idx  viewporter-client-protocol-code.h.78B18C50E8F3A7E6.idx  viewporter-client-protocol.h.89F97DF12E3118C8.idx  wayland-client-protocol-code.h.936DDBA203EB8130.idx  wayland-client-protocol.h.0C156C0F8C050688.idx  xdg-activation-v1-client-protocol-code.h.976B434F1D142347.idx  xdg-activation-v1-client-protocol.h.E80773261833B9FD.idx  xdg-decoration-unstable-v1-client-protocol-code.h.00BB8B44B4D12DAA.idx  xdg-decoration-unstable-v1-client-protocol.h.777C479DDD97A140.idx  xdg-shell-client-protocol-code.h.A097FB0E015EA2FC.idx  xdg-shell-client-protocol.h.0FD6C58C8594720C.idx
Targets/Debug/Editor/: Makefile  cmake_install.cmake
Targets/Debug/Engine/: Makefile  cmake_install.cmake
Targets/Debug/Game/: Makefile  cmake_install.cmake
